<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/primary"
    tools:context="com.example.govsmscovid19.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/secondaryToolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/primaryDark"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:titleTextColor="?attr/textcolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_angle_left" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textColor="?attr/textcolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondaryToolbar2" />

            <EditText
                android:id="@+id/addressInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textColor="?attr/textcolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInput" />

            <Button
                android:id="@+id/saveButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="59dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/save"
                android:textColor="@color/colorLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressInput" />

            <TextView
                android:id="@+id/disclaimerText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="40dp"
                android:foregroundTint="#FFFFFF"
                android:text="@string/userData"
                android:textAlignment="center"
                android:textColor="?attr/textcolor"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saveButton" />

            <Switch
                android:id="@+id/themeSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/nightMode"
                android:textColor="?attr/textcolor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/disclaimerText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>