<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/primary"
    tools:context="com.example.govsmscovid19.InfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/secondaryToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/primaryDark"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_angle_left"
                app:titleTextColor="?attr/textcolor" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="169dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="170dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondaryToolbar"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="165dp"
                android:layout_height="26dp"
                android:layout_marginStart="123dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="123dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="?attr/textcolor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/infoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:lineSpacingExtra="1sp"
                android:padding="10dp"
                android:text="@string/info"
                android:textAlignment="center"
                android:textColor="?attr/textcolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appName" />

            <TextView
                android:id="@+id/developerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="152dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/developer"
                android:textAlignment="center"
                android:textColor="?attr/textcolor"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
